update contact us API call link to its right domain; then fixed close button of contact us form align with the menu button of navigation bar when scrolled up or down.

--- a/src/app/sections/contact-us/contact-us.component.scss
+++ b/src/app/sections/contact-us/contact-us.component.scss
@@ -111,13 +111,17 @@
 
     .etg-close-btn {
       position: absolute;
-      top: 80px;
-      right: 0;
+      top: 48px;
+      right: 3px;
       rotate: 0deg;
       transition:
+        top 300ms ease-in-out,
         rotate 300ms ease-in-out;
 
       .etg-svg {
+        width: 35px;
+        height: 35px;
+
         path {
           transition:
             fill 300ms ease-in-out;
@@ -630,6 +634,14 @@
 
     @media only screen and (max-width: 768px) {
       height: auto;
+    }
+  }
+
+  &.nav-scroll {
+    .etg-container {
+      .etg-close-btn {
+        top: 33px;
+      }
     }
   }
 }
